--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,12 @@ if (FIPS_WINDOWS)
     add_definitions(-DGLFW_EXPOSE_NATIVE_WGL)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
     add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
-    add_definitions(-DUSE_CURRENT_DIRECTORY)
+    add_definitions(-DTB_USE_CURRENT_DIRECTORY)
 elseif (FIPS_LINUX)
 elseif (FIPS_MACOS)
     add_definitions(-DMACOSX)
     add_definitions(-Dnullptr=0)
+    add_definitions(-DTB_USE_CURRENT_DIRECTORY)
 endif()
 
 fips_begin_lib(turbobadger)
