--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "turbobadger"]
 	path = turbobadger
-	url = https://github.com/fungos/turbobadger.git
+	url = https://github.com/fruxo/turbobadger.git
